--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
     <meta property="og:title" content="inboxy: Chrome extension for email bundles on Gmail">
-    <meta property="og:image" content="assets/inboxy.png">
+    <meta property="og:description" content="inboxy is an open-source Chrome extension that bundles together emails and makes it easier to manage your inbox.">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://github.com/teresa-ou/inboxy/blob/gh-pages/assets/inboxy.png?raw=true">
     <meta property="og:url" content="https://teresa-ou.github.io/inboxy">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
