--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </nav>
       <section class="top-section">
         <div class="top-section-content">
-          <h1>Bringing Inbox-style bundles to Gmail</h1>
+          <h1>Bringing Google Inbox bundles to Gmail</h1>
           <div class="description">
             inboxy is an open-source Chrome extension that bundles together emails and 
             makes it easier to manage your inbox.
@@ -90,7 +90,7 @@
             Gmail, by bundling together emails that share the same labels.
           </p>
           <p>
-            To get started with automatic bundling, simply 
+            To get started with bundling, simply 
             <a target="_blank" href="https://support.google.com/mail/answer/6579?hl=en">create filters</a>
             to apply labels to incoming messages. 
           </p>
