--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta property="og:description" content="inboxy is an open-source browser extension that bundles together emails and makes it easier to manage your inbox.">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://github.com/teresa-ou/inboxy/blob/gh-pages/assets/inboxy.png?raw=true">
-    <meta property="og:url" content="https://teresa-ou.github.io/inboxy">
+    <meta property="og:url" content="https://www.inboxymail.com">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicons/apple-touch-icon.png">
