update section on privacy

--- a/index.html
+++ b/index.html
@@ -151,10 +151,27 @@
     </section>
     
     <section>
-      <h2>Privacy & Security</h2>
+      <h2 id="privacy-policy">Privacy Policy</h2>
       <p>
-        inboxy uses Javascript and CSS to draw bundles in Gmail. The browser extension does not send 
-        any data or include any sort of tracking. 
+        inboxy is a lightweight visual layer over Gmail, and it uses Javascript and CSS to draw bundles.
+      </p>
+      <p>
+        <b>
+          With the default settings, inboxy does not handle any personal or sensitive data.
+        </b>
+      </p>
+      <p>
+        However, if you choose to customize your extension settings, <b>inboxy uses the Chrome Storage Sync API to sync settings</b> to browsers that you're logged into. 
+      </p>
+      <p>
+        In particular, the settings allow you to specify a list of labels to bundle (whitelist) or not to bundle (blacklist), instead of defaulting to bundling all labels. The list of labels may contain personal or sensitive data&mdash;for example, you might have a label where the text is your name. To maximize protection of your data, you should either:
+        <ol>
+          <li>Rename the labels so that they don't contain sensitive information, or</li>
+          <li>Opt not to include those labels in the list.</li>
+        </ol>
+      </p>
+      <p>
+        inboxy's usage of data adheres to the Chrome Web Store User Data Policy, including the Limited Use requirements.
       </p>
     </section>
 
