make privacy policy a separate page

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
     </section>
     
     <section>
-      <h2 id="privacy-policy">Privacy Policy</h2>
+      <h2>Privacy</h2>
       <p>
         inboxy is a lightweight visual layer over Gmail, and it uses Javascript and CSS to draw bundles.
       </p>
@@ -161,14 +161,7 @@
         </b>
       </p>
       <p>
-        However, if you choose to customize your extension settings, <b>inboxy uses the Chrome Storage Sync API to sync settings</b> to browsers that you're logged into. 
-      </p>
-      <p>
-        In particular, the settings allow you to specify a list of labels to bundle (whitelist) or not to bundle (blacklist), instead of defaulting to bundling all labels. The list of labels may contain personal or sensitive data&mdash;for example, you might have a label where the text is your name. To maximize protection of your data, you should either:
-        <ol>
-          <li>Rename the labels so that they don't contain sensitive information, or</li>
-          <li>Opt not to include those labels in the list.</li>
-        </ol>
+        However, if you choose to customize your extension settings, <b>inboxy uses the Chrome Storage Sync API to sync settings</b> to browsers that you're logged into. Certain settings may handle personal or sensitive data. Please refer to the <a href="privacy-policy.html">privacy policy</a> for full details.
       </p>
       <p>
         inboxy's usage of data adheres to the Chrome Web Store User Data Policy, including the Limited Use requirements.
